<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/calories_number"
        android:textColor="@color/colorOnPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addMealButton"
        android:layout_width="140dp"
        android:layout_height="62dp"
        android:text="@string/add_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAmountNumber" />

    <Button
        android:id="@+id/addWorkoutButton"
        android:layout_width="179dp"
        android:layout_height="64dp"
        android:text="@string/add_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDurationNumber" />

    <Button
        android:id="@+id/suggestMealButton"
        android:layout_width="182dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/suggest_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWorkoutButton" />

    <EditText
        android:id="@+id/editNutritonNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTextView" />

    <EditText
        android:id="@+id/editAmountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNutritonNumber" />

    <EditText
        android:id="@+id/editDurationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMealButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_food"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editNutritonNumber"
        app:layout_constraintStart_toStartOf="@+id/editNutritonNumber" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_amount"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editAmountNumber"
        app:layout_constraintStart_toStartOf="@+id/editAmountNumber" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_workout_time"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editDurationNumber"
        app:layout_constraintStart_toStartOf="@+id/editDurationNumber" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="378dp"
        android:layout_height="82dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/colorOnPrimary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestMealButton" />

</androidx.constraintlayout.widget.ConstraintLayout>